:sparkles: Add script for killwindow and forcekillwindow

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -225,6 +225,9 @@ bind = $MOD SHIFT, minus, movetoworkspace, 11
 bind = $MOD SHIFT, equal, movetoworkspace, 12
 
 bind = CTRL ALT, $RMB, exec, $HOME/.bin/killwindow
+bind = CTRL ALT, End, exec, $HOME/.bin/killwindow
+bind = SUPER SHIFT CTRL ALT, $RMB, exec, $HOME/.bin/forcekillwindow
+bind = SUPER SHIFT CTRL ALT, End, exec, $HOME/.bin/forcekillwindow
 
 # Window groups
 bind = $MOD, grave, togglegroup
