:bug: Fix eww and kpxc

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -62,11 +62,11 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
 exec-once = $HOME/.bin/startpipewire
-exec-once = pidof keepassxc || $HOME/.bin/startkeepassxc
+exec-once = pidof keepassxc || keepassxc
 exec-once = kitty
 exec-once = pidof waybar && exit; sleep 1; $HOME/.bin/rewaybar
 exec-once = pidof orage && exit; sleep 1; orage
-exec = pidof eww && exit 1; eww daemon --no-daemonize
+exec = pidof eww || eww daemon --no-daemonize
 
 # Remove if you're not me
 exec = killall timecmds; sleep 3; timecmds
