--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,18 +1,20 @@
 source=$HOME/.config/hypr/themes/mocha.conf
 
 # Monitors
-monitor=HDMI-A-1,1920x1080@60,0x0,1
-monitor=DP-1,1920x1080@60,1920x200,1
+monitor=HDMI-A-1,1920x1080@240,0x908,1
+monitor=DP-2,1920x1080@80,1920x1080,1
+monitor=DP-1,1920x1080@60,3264x0,1
 
 monitor=HDMI-A-1,addreserved,0,0,0,0
+monitor=DP-2,addreserved,0,0,0,0
 monitor=DP-1,addreserved,0,0,0,0
 
 workspace=DP-1,12
 workspace=DP-1,11
-workspace=DP-1,10
-workspace=DP-1,9
-workspace=HDMI-A-1,8
-workspace=HDMI-A-1,7
+workspace=DP-2,10
+workspace=DP-2,9
+workspace=DP-2,8
+workspace=DP-2,7
 workspace=HDMI-A-1,6
 workspace=HDMI-A-1,5
 workspace=HDMI-A-1,4
@@ -72,7 +74,7 @@ exec = pidof eww || eww daemon --no-daemonize
 exec = killall timecmds; sleep 3; timecmds
 exec = pidof -x dunstpause && exit 1; sleep 3; dunstpause
 
-exec-once = hyprctl dispatch workspace 1
+exec-once = hyprctl dispatch workspace 12; hyprctl dispatch workspace 1
 
 #exec-once = replay-sorcery
 
