:sparkles: Mod+Tab = workspace 9

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -2,6 +2,7 @@ source=$HOME/.config/hypr/themes/mocha.conf
 
 # Monitors
 monitor=HDMI-A-1,1920x1080@240,0x908,1
+#monitor=HDMI-A-1,1920x1080@120,0x908,1
 monitor=DP-2,1920x1080@80,1920x1080,1
 monitor=DP-1,1920x1080@60,3264x0,1
 
