:sparkles: Minor tweaks

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -2,7 +2,7 @@ source=$HOME/.config/hypr/themes/mocha.conf
 
 # Monitors
 monitor=HDMI-A-1,1920x1080@240,0x908,1
-#monitor=HDMI-A-1,1920x1080@120,0x908,1
+#monitor=HDMI-A-1,1920x1080@60,0x908,1
 monitor=DP-2,1920x1080@80,1920x1080,1
 monitor=DP-1,1920x1080@60,3264x0,1
 
@@ -163,7 +163,7 @@ misc {
 }
 
 xwayland {
-	use_nearest_neighbor = off
+#	use_nearest_neighbor = off
 }
 
 windowrule = workspace 12, ^(discord)$
@@ -188,9 +188,6 @@ bind = $MOD, left, movefocus, l
 bind = $MOD, right, movefocus, r
 bind = $MOD, up, movefocus, u
 bind = $MOD, down, movefocus, d
-
-bind = ALT, Tab, cyclenext
-bind = ALT SHIFT, Tab, cyclenext, prev
 
 bind = SHIFT $MOD, left, movewindow, l
 bind = SHIFT $MOD, right, movewindow, r
@@ -247,4 +244,3 @@ bindm = $MOD, $RMB, resizewindow
 
 # Apps keybinds
 exec = $HOME/.bin/appbinds on
-exec = $HOME/.bin/focusscript
