:sparkles: Config for touchpad and touchscreen

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -87,6 +87,17 @@ input {
 
 	follow_mouse = 1
 	float_switch_override_focus = true
+
+	touchpad {
+		disable_while_typing = true
+		natural_scroll = true
+		scroll_factor = 0.2
+	}
+
+	touchdevice {
+		transform = 0
+		output =
+	}
 }
 
 # Disable DualShock controller touchpad
