:sparkles: Add emergency exit if programs don't open but Hyprland

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -239,6 +239,7 @@ bind = CTRL ALT, $RMB, exec, $HOME/.bin/killwindow
 bind = CTRL ALT, End, exec, $HOME/.bin/killwindow
 bind = SUPER SHIFT CTRL ALT, $RMB, exec, $HOME/.bin/forcekillwindow
 bind = SUPER SHIFT CTRL ALT, End, exec, $HOME/.bin/forcekillwindow
+bind = SUPER SHIFT CTRL ALT, Delete, exit
 
 # Window groups
 bind = $MOD, grave, togglegroup
