:sparkles: Change hz, move NVIDIA wayland, enable x11 scaling

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -3,7 +3,7 @@ source=$HOME/.config/hypr/themes/mocha.conf
 # Monitors
 monitor=HDMI-A-1,1920x1080@240,0x908,1
 #monitor=HDMI-A-1,1920x1080@60,0x908,1
-monitor=DP-2,1920x1080@80,1920x1080,1
+monitor=DP-2,1920x1080@60,1920x1080,1
 monitor=DP-1,1920x1080@60,3264x0,1
 
 monitor=HDMI-A-1,addreserved,0,0,0,0
@@ -37,11 +37,11 @@ env = EDITOR, vim
 env = LANG, en_AU.UTF-8
 env = LC_ALL, en_AU.UTF-8
 env = MPD_HOST, $XDG_RUNTIME_DIR/mpd/socket
+env = XDG_SESSION_TYPE, wayland
 
 # Remove if not using NVIDIA GPU
 env = LIBVA_DRIVER_NAME, nvidia
 env = VDPAU_DRIVER, nvidia
-env = XDG_SESSION_TYPE, wayland
 env = __GLX_VENDOR_LIBRARY_NAME, nvidia
 env = WLR_NO_HARDWARE_CURSORS, 1
 
@@ -65,7 +65,11 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
 exec-once = $HOME/.bin/startpipewire
-exec-once = pidof keepassxc || keepassxc
+
+# Special script to start keepassxc with ssh-agent environment variables
+exec-once = pidof keepassxc || ~/.bin/startkeepassxc
+#exec-once = pidof keepassxc || keepassxc
+
 exec-once = kitty
 exec-once = pidof waybar && exit; sleep 1; $HOME/.bin/rewaybar
 exec-once = pidof orage && exit; sleep 1; orage
@@ -174,7 +178,7 @@ misc {
 }
 
 xwayland {
-#	use_nearest_neighbor = off
+	use_nearest_neighbor = off
 }
 
 windowrule = workspace 12, ^(discord)$
