:sparkles: Udiskie options

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -55,7 +55,7 @@ exec-once = swayidle -w timeout 60 swaylock
 exec = killall dunst; dunst
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
-exec-once = udiskie
+exec-once = udiskie -f nemo -t -n -A
 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = $HOME/.bin/updategtk
