--- a/hyprland.conf
+++ b/hyprland.conf
@@ -5,10 +5,12 @@ monitor=HDMI-A-1,1920x1080@240,0x908,1
 #monitor=HDMI-A-1,1920x1080@60,0x908,1
 monitor=DP-2,1920x1080@60,1920x1080,1
 monitor=DP-1,1920x1080@60,3264x0,1
+monitor=HEADLESS-1,1920x1080@60,2700x2160,1
 
 monitor=HDMI-A-1,addreserved,0,0,0,0
 monitor=DP-2,addreserved,0,0,0,0
 monitor=DP-1,addreserved,0,0,0,0
+monitor=HEADLESS-1,addreserved,0,0,0,0
 
 workspace=DP-1,12
 workspace=DP-1,11
