:sparkles: Use SwayOSD

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -72,6 +72,8 @@ exec-once = $HOME/.bin/startpipewire
 exec-once = pidof keepassxc || ~/.bin/startkeepassxc
 #exec-once = pidof keepassxc || keepassxc
 
+exec-once = swayosd-server
+
 exec-once = kitty
 exec-once = pidof waybar && exit; sleep 1; $HOME/.bin/rewaybar
 exec-once = pidof orage && exit; sleep 1; orage
