--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,6 +13,7 @@
   - ~/.bin/
 
 - link:
+    ~/.config/kitty/kitty.conf: kitty.conf
     ~/.config/dunst/dunstrc: dunstrc
     ~/.bin/power: power
     ~/.bin/appbinds: appbinds
