:bug: Fix wallpaper scaling on swaylock

--- a/swaylock.conf
+++ b/swaylock.conf
@@ -41,11 +41,11 @@ indicator-caps-lock
 #timestr=%H.%M.%S
 #datestr=%Y.%m.%d %a
 
+scaling=fill
 fade-in=5
 grace=10
-screenshots
-#effect-pixelate=20
-#effect-blur=20x5
+#screenshots
 effect-pixelate=20
-#effect-blur=20x5
+effect-blur=20x5
 effect-compose=/home/mekb/.wallpaper
+image=/home/mekb/.wallpaper
