--- a/hyprland.conf
+++ b/hyprland.conf
@@ -137,10 +137,12 @@ decoration {
 	rounding = 10
 	multisample_edges = true
 
-	blur = true
-	blur_size = 7
-	blur_passes = 3
-	blur_new_optimizations = true
+	blur {
+		enabled = true
+		size = 1
+		passes = 3
+		new_optimizations = true
+	}
 
 	drop_shadow = true
 	shadow_range = 30
