:wheelchair: Add touch keyboard

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -49,6 +49,8 @@ env = WLR_NO_HARDWARE_CURSORS, 1
 
 # Autostart
 
+exec-once = wvkbd-mobintl --hidden --fn Ubuntu --bg 1e1e2e --fg 45475a --fg-sp 585b70 --press 313244 --press-sp 313244 --swipe 313244 --swipe-sp 313244 --text cdd6f4 --text-sp f5c2e7 --landscape-layers simple,special -H 300 -L 200
+
 exec = hyprctl setcursor capitaine-cursors-ctp 32
 
 exec-once = pidof dinit || dinit
