:adhesive_bandage: Fix font rendering a bit

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -41,6 +41,9 @@ env = LC_ALL, en_AU.UTF-8
 env = MPD_HOST, $XDG_RUNTIME_DIR/mpd/socket
 env = XDG_SESSION_TYPE, wayland
 
+# Fix font rendering
+env = FREETYPE_PROPERTIES, cff:no-stem-darkening=0 autofitter:no-stem-darkening=0
+
 # Remove if not using NVIDIA GPU
 env = LIBVA_DRIVER_NAME, nvidia
 env = VDPAU_DRIVER, nvidia
