:sparkles: Modify kitty.conf a bit
Fix scrollback pager

--- a/kitty.conf
+++ b/kitty.conf
@@ -21,7 +21,7 @@ cursor_underline_thickness 1.5
 cursor_blink_interval -1
 cursor_stop_blinking_after 15.0
 scrollback_lines 20000
-scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
+scrollback_pager less -r +INPUT_LINE_NUMBER
 # scrollback_pager_history_size 0
 # scrollback_fill_enlarged_window no
 # wheel_scroll_multiplier 5.0
@@ -30,9 +30,9 @@ scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 mouse_hide_wait 2.0
 url_color #f5c2e7
 url_style curly
-# open_url_with default
-# url_prefixes http https file ftp gemini irc gopher mailto news git
-# detect_urls yes
+open_url_with default
+url_prefixes http https file ftp gemini irc gopher mailto news git
+detect_urls yes
 # url_excluded_characters 
 # copy_on_select no
 # paste_actions quote-urls-at-prompt
@@ -198,7 +198,7 @@ map kitty_mod+page_up   scroll_page_up
 map kitty_mod+page_down scroll_page_down
 map kitty_mod+home      scroll_home
 map kitty_mod+end       scroll_end
-map kitty_mod+h         show_scrollback
+map kitty_mod+F show_scrollback
 # map kitty_mod+n new_window
 # map kitty_mod+n new_os_window
 map kitty_mod+w close_window
@@ -253,7 +253,7 @@ map kitty_mod+escape kitty_shell window
 # map kitty_mod+a>d    set_background_opacity default
 map kitty_mod+delete clear_terminal reset active
 map kitty_mod+f6 debug_config
-map ctrl+shift+J move_window left
-map ctrl+shift+L move_window right
-map ctrl+shift+I move_window up
-map ctrl+shift+K move_window down
+map kitty_mod+J move_window left
+map kitty_mod+L move_window right
+map kitty_mod+I move_window up
+map kitty_mod+K move_window down
