:sparkles: Add another keybind for search scrollback

--- a/kitty.conf
+++ b/kitty.conf
@@ -199,6 +199,7 @@ map kitty_mod+page_down scroll_page_down
 map kitty_mod+home      scroll_home
 map kitty_mod+end       scroll_end
 map kitty_mod+F show_scrollback
+map kitty_mod+G launch --type=overlay --stdin-source=@screen_scrollback fzf --no-sort --tac --exact -i
 # map kitty_mod+n new_window
 # map kitty_mod+n new_os_window
 map kitty_mod+w close_window
