:bug: Fix editor setting (should be nvim, not neovim)

--- a/kitty.conf
+++ b/kitty.conf
@@ -157,7 +157,7 @@ mark2_foreground #1E1E2E
 mark2_background #CBA6F7
 mark3_foreground #1E1E2E
 mark3_background #74C7EC
-editor neovim
+editor nvim
 close_on_child_death yes
 allow_remote_control no
 # listen_on none
