:sparkles: Add shortcut to toggle auto-locking

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -58,7 +58,7 @@ exec = hyprctl setcursor capitaine-cursors-ctp 32
 
 exec-once = pidof dinit || dinit
 
-exec-once = swayidle -w timeout 60 swaylock
+exec-once = $HOME/.bin/startswayidle
 exec = killall dunst; dunst
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
