:sparkles: Add JamesDSP to startup

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -79,8 +79,9 @@ exec-once = pidof keepassxc || ~/.bin/startkeepassxc
 exec-once = swayosd-server
 
 exec-once = kitty
-exec-once = pidof waybar && exit; sleep 1; $HOME/.bin/rewaybar
-exec-once = pidof orage && exit; sleep 1; orage
+exec-once = pidof waybar && exit; sleep 1; $HOME/.bin/rewaybar # waybar script
+exec-once = pidof orage && exit; sleep 1; orage # calender
+exec-once = pidof jamesdsp && exit; sleep 1; jamesdsp --tray # audio mixer
 exec = pidof eww || eww daemon --no-daemonize
 
 # Remove if you're not me
