:sparkles: Minor changes
- Remove right-click close on waybar
- Remove Discord being pinned on workspace 12
- Pin Foto to all workspaces

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -192,9 +192,9 @@ xwayland {
 	use_nearest_neighbor = off
 }
 
-windowrule = workspace 12, ^(discord)$
 #windowrule = noblur, ^(kitty)$
 windowrule = float, ^(foto)$
+windowrule = pin, ^(foto)$
 windowrule = float, ^(screenshare)$
 windowrule = float, title:^(LibreWolf — Sharing Indicator)$
 windowrule = float, title:^sketch.*
