--- a/hyprland.conf
+++ b/hyprland.conf
@@ -132,15 +132,14 @@ general {
 	border_size = 5
 	col.active_border = $pink
 	col.inactive_border = rgba(00000033)
-	col.group_border = rgba(00000033)
-	col.group_border_active = $sapphire $green 45deg
+	col.nogroup_border = rgba(00000033)
+	col.nogroup_border_active = $pink
 
 	apply_sens_to_raw = 0
 }
 
 decoration {
 	rounding = 10
-	multisample_edges = true
 
 	blur {
 		enabled = true
