:sparkles: Add kvantum

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -27,6 +27,7 @@ workspace=HDMI-A-1,1
 
 # Environment Variables, change this to match your system
 env = QT_QPA_PLATFORMTHEME, qt5ct
+env = QT_STYLE_OVERRIDE, kvantum
 env = XCURSOR_SIZE, 32
 env = XDG_SCREENSHOTS_DIR, $HOME/Screenshots/
 env = MOZ_DBUS_REMOTE, 1
