:sparkles: Make keepassxc GPG window floating

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -197,6 +197,7 @@ windowrule = float, ^(foto)$
 windowrule = pin, ^(foto)$
 windowrule = float, ^(screenshare)$
 windowrule = float, title:^(LibreWolf — Sharing Indicator)$
+windowrule = float, title:^(KeePassXC -  Access Request)$
 windowrule = float, title:^sketch.*
 windowrule = float, steam_app_391540
 windowrule = float, ^(org\.kde\.polkit-kde-authentication-agent-1)$
