:sparkles: Add KDE connect

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -61,6 +61,7 @@ exec-once = pidof dinit || dinit
 exec-once = $HOME/.bin/startswayidle
 exec = killall dunst; dunst
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = kdeconnect-indicator
 
 exec-once = udiskie -f nemo -t -n -A
 
