:sparkles: Minor changes

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -2,7 +2,6 @@ source=$HOME/.config/hypr/themes/mocha.conf
 
 # Monitors
 monitor=HDMI-A-1,1920x1080@240,0x908,1
-#monitor=HDMI-A-1,1920x1080@60,0x908,1
 monitor=DP-2,1920x1080@60,1920x1080,1
 monitor=DP-1,1920x1080@60,3552x0,1
 monitor=HEADLESS-1,1920x1080@60,2700x2160,1
@@ -86,7 +85,6 @@ exec-once = pidof jamesdsp && exit; sleep 1; jamesdsp --tray # audio mixer
 exec = pidof eww || eww daemon --no-daemonize
 
 # Remove if you're not me
-exec = killall timecmds; sleep 3; timecmds
 exec = pidof -x dunstpause && exit 1; sleep 3; dunstpause
 
 exec-once = hyprctl dispatch workspace 12; hyprctl dispatch workspace 1
@@ -194,6 +192,7 @@ xwayland {
 
 #windowrule = noblur, ^(kitty)$
 windowrule = float, ^(foto)$
+windowrule = float, ^(Unity)$
 windowrule = pin, ^(foto)$
 windowrule = float, ^(screenshare)$
 windowrule = float, title:^(LibreWolf — Sharing Indicator)$
