:sparkles: Rearrange monitors

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -2,9 +2,12 @@ source=$HOME/.config/hypr/themes/mocha.conf
 
 # Monitors
 monitor=HDMI-A-1,1920x1080@240,0x908,1
-monitor=DP-2,1920x1080@60,1920x1080,1
-monitor=DP-1,1920x1080@60,3552x0,1
+monitor=DP-2,1920x1080@60,1920x980,1
+monitor=DP-1,1920x1080@60,3840x100,1
 monitor=HEADLESS-1,1920x1080@60,2700x2160,1
+
+#monitor=HDMI-A-1,1920x1080@60,0x908,1
+#monitor=DP-1,1920x1080@60,1920x1080,1
 
 monitor=HDMI-A-1,addreserved,0,0,0,0
 monitor=DP-2,addreserved,0,0,0,0
