--- a/kitty.conf
+++ b/kitty.conf
@@ -188,8 +188,8 @@ kitty_mod ctrl+shift
 clear_all_shortcuts yes
 # action_alias
 # kitten_alias hints hints --hints-offset=0
-map kitty_mod+c copy_to_clipboard
-map kitty_mod+v paste_from_clipboard
+map kitty_mod+C copy_to_clipboard
+map kitty_mod+V paste_from_clipboard
 # map kitty_mod+s paste_from_selection
 # map kitty_mod+o pass_selection_to_program
 map kitty_mod+up        scroll_line_up
@@ -202,13 +202,13 @@ map kitty_mod+F show_scrollback
 map kitty_mod+G launch --type=overlay --stdin-source=@screen_scrollback fzf --no-sort --tac --exact -i
 # map kitty_mod+n new_window
 # map kitty_mod+n new_os_window
-map kitty_mod+w close_window
+map kitty_mod+W close_window
 map kitty_mod+] next_window
 map kitty_mod+[ previous_window
 # map kitty_mod+f move_window_forward
 # map kitty_mod+b move_window_backward
 # map kitty_mod+` move_window_to_top
-map kitty_mod+r start_resizing_window
+map kitty_mod+R start_resizing_window
 # map kitty_mod+1 first_window
 # map kitty_mod+2 second_window
 # map kitty_mod+3 third_window
