:sparkles: Minor changes
Add dictation shortcut

Open btop on startup on workspace 12 (on other monitor)

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -14,9 +14,9 @@ monitor=DP-2,addreserved,0,0,0,0
 monitor=DP-1,addreserved,0,0,0,0
 monitor=HEADLESS-1,addreserved,0,0,0,0
 
-workspace=DP-1,12
-workspace=DP-1,11
-workspace=DP-2,10
+workspace=DP-1,12 # E/=
+workspace=DP-1,11 # W/-
+workspace=DP-2,10 # Q/0
 workspace=DP-2,9
 workspace=DP-2,8
 workspace=DP-2,7
@@ -55,6 +55,8 @@ env = WLR_NO_HARDWARE_CURSORS, 1
 # Autostart
 
 exec-once = wvkbd-mobintl --hidden --fn Ubuntu --bg 1e1e2e --fg 45475a --fg-sp 585b70 --press 313244 --press-sp 313244 --swipe 313244 --swipe-sp 313244 --text cdd6f4 --text-sp f5c2e7 --landscape-layers simple,special -H 300 -L 200
+
+exec-once = kitty --class "btop" btop
 
 exec = hyprctl setcursor capitaine-cursors-ctp 32
 
@@ -204,6 +206,7 @@ windowrule = float, title:^sketch.*
 windowrule = float, steam_app_391540
 windowrule = float, ^(org\.kde\.polkit-kde-authentication-agent-1)$
 windowrule = tile, neovide
+windowrule = workspace 12 silent, ^(btop)$
 
 $LMB = mouse:272
 $RMB = mouse:273
