--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,264 +1,11 @@
-source=$HOME/.config/hypr/themes/mocha.conf
-
-# Monitors
-monitor=HDMI-A-1,1920x1080@240,0x908,1
-monitor=DP-2,1920x1080@60,1920x980,1
-monitor=DP-1,1920x1080@60,3840x100,1
-monitor=HEADLESS-1,1920x1080@60,2700x2160,1
-
-#monitor=HDMI-A-1,1920x1080@60,0x908,1
-#monitor=DP-1,1920x1080@60,1920x1080,1
-
-monitor=HDMI-A-1,addreserved,0,0,0,0
-monitor=DP-2,addreserved,0,0,0,0
-monitor=DP-1,addreserved,0,0,0,0
-monitor=HEADLESS-1,addreserved,0,0,0,0
-
-workspace=DP-1,12 # E/=
-workspace=DP-1,11 # W/-
-workspace=DP-2,10 # Q/0
-workspace=DP-2,9
-workspace=DP-2,8
-workspace=DP-2,7
-workspace=HDMI-A-1,6
-workspace=HDMI-A-1,5
-workspace=HDMI-A-1,4
-workspace=HDMI-A-1,3
-workspace=HDMI-A-1,2
-workspace=HDMI-A-1,1
-
-# Environment Variables, change this to match your system
-env = QT_QPA_PLATFORMTHEME, qt5ct
-env = XCURSOR_SIZE, 32
-env = XDG_SCREENSHOTS_DIR, $HOME/Screenshots/
-env = MOZ_DBUS_REMOTE, 1
-env = SDL_VIDEODRIVER, wayland
-env = MOZ_ENABLE_WAYLAND, 1
-env = _JAVA_AWT_WM_NONREPARENTING, 1
-env = GTK_THEME, Catppuccin-Mocha-Standard-Pink-Dark
-env = BROWSER, librewolf
-env = EDITOR, vim
-env = LANG, en_AU.UTF-8
-env = LC_ALL, en_AU.UTF-8
-env = MPD_HOST, $XDG_RUNTIME_DIR/mpd/socket
-env = XDG_SESSION_TYPE, wayland
-
-# Fix font rendering
-env = FREETYPE_PROPERTIES, cff:no-stem-darkening=0 autofitter:no-stem-darkening=0
-
-# Remove if not using NVIDIA GPU
-env = LIBVA_DRIVER_NAME, nvidia
-env = VDPAU_DRIVER, nvidia
-env = __GLX_VENDOR_LIBRARY_NAME, nvidia
-env = WLR_NO_HARDWARE_CURSORS, 1
-
-# Autostart
-
-exec-once = wvkbd-mobintl --hidden --fn Ubuntu --bg 1e1e2e --fg 45475a --fg-sp 585b70 --press 313244 --press-sp 313244 --swipe 313244 --swipe-sp 313244 --text cdd6f4 --text-sp f5c2e7 --landscape-layers simple,special -H 300 -L 200
-
-exec-once = kitty --class "btop" btop
-
-exec = hyprctl setcursor capitaine-cursors-ctp 32
-
-exec-once = pidof dinit || dinit
-
-exec-once = $HOME/.bin/startswayidle
-exec = killall dunst; dunst
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = kdeconnect-indicator
-
-exec-once = udiskie -f nemo -t -n -A
-
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = $HOME/.bin/updategtk
-exec-once = $HOME/.bin/startxdgportal
-
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
-
-exec-once = $HOME/.bin/startpipewire
-
-# Special script to start keepassxc with ssh-agent environment variables
-exec-once = pidof keepassxc || ~/.bin/startkeepassxc
-
-exec-once = swayosd-server
-
-exec-once = kitty
-exec-once = pidof waybar && exit; sleep 1; $HOME/.bin/rewaybar # waybar script
-exec-once = pidof orage && exit; sleep 1; orage # calender
-exec-once = pidof jamesdsp && exit; sleep 1; jamesdsp --tray # audio mixer
-exec = pidof eww || eww daemon --no-daemonize
-
-# Remove if you're not me
-exec = pidof -x dunstpause && exit 1; sleep 3; dunstpause
-
-exec-once = hyprctl dispatch workspace 12; hyprctl dispatch workspace 1
-
-#exec-once = replay-sorcery
-
-exec-once = $HOME/.bin/rewallpaper
-
-input {
-	kb_layout = us
-	kb_options = compose:ralt
-
-	follow_mouse = 1
-	float_switch_override_focus = true
-
-	touchpad {
-		disable_while_typing = true
-		natural_scroll = true
-		scroll_factor = 0.2
-	}
-
-	touchdevice {
-		transform = 0
-		output =
-	}
-}
-
-# Disable DualShock controller touchpad
-device:Wireless Controller Touchpad {
-	enabled = no
-}
-device:Sony Computer Entertainment Wireless Controller Touchpad {
-	enabled = no
-}
-
-general {
-	sensitivity = 1
-
-	layout = master
-
-	gaps_in = 4
-	gaps_out = 16
-
-	border_size = 5
-	col.active_border = $pink
-	col.inactive_border = rgba(00000033)
-	col.nogroup_border = rgba(00000033)
-	col.nogroup_border_active = $pink
-
-	apply_sens_to_raw = 0
-}
-
-decoration {
-	rounding = 10
-
-	blur {
-		enabled = true
-		size = 1
-		passes = 3
-		new_optimizations = true
-	}
-
-	drop_shadow = true
-	shadow_range = 30
-	shadow_render_power = 3
-	shadow_ignore_window = true
-	col.shadow = rgba(00000020)
-	col.shadow_inactive = rgba(00000020)
-	shadow_offset = 20 20
-	shadow_scale = 0.95
-}
-
-animations {
-	enabled = yes
-
-	bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-	bezier = noBezier, 0.1, 0.9, 0.1, 1
-
-	animation = windows, 1, 10, myBezier, popin 40%
-	animation = windowsMove, 1, 7, myBezier
-	animation = windowsOut, 1, 20, myBezier, popin 60%
-	animation = border, 1, 10, default
-	animation = borderangle, 1, 8, default
-	animation = fade, 1, 7, default
-	animation = workspaces, 1, 6, default, slide
-}
-
-master {
-	mfact = 0.5
-	inherit_fullscreen = false
-	orientation = left
-	new_on_top = true
-}
-
-misc {
-	disable_hyprland_logo = true
-	disable_splash_rendering = true
-
-	mouse_move_enables_dpms = true
-}
-
-xwayland {
-	use_nearest_neighbor = off
-}
-
-#windowrule = noblur, ^(kitty)$
-windowrule = float, ^(foto)$
-windowrule = float, ^(Unity)$
-windowrule = pin, ^(foto)$
-windowrule = float, ^(screenshare)$
-windowrule = float, title:^(LibreWolf — Sharing Indicator)$
-windowrule = float, title:^(KeePassXC -  Access Request)$
-windowrule = float, title:^sketch.*
-windowrule = float, steam_app_391540
-windowrule = float, ^(org\.kde\.polkit-kde-authentication-agent-1)$
-windowrule = tile, neovide
-windowrule = workspace 12 silent, ^(btop)$
-
-$LMB = mouse:272
-$RMB = mouse:273
-$MMB = mouse:274
-$MOD = SUPER
-
-bind = $MOD, $MMB, togglefloating
-bind = $MOD CTRL, $LMB, togglefloating
-
-bind = , mouse:277, pass, ^(discord)$
-bind = , F8, pass, ^(xclicker)$
-
-# Switch workspaces
-bind = $MOD, 1, workspace, 1
-bind = $MOD, 2, workspace, 2
-bind = $MOD, 3, workspace, 3
-bind = $MOD, 4, workspace, 4
-bind = $MOD, 5, workspace, 5
-bind = $MOD, 6, workspace, 6
-bind = $MOD, 7, workspace, 7
-bind = $MOD, 8, workspace, 8
-bind = $MOD, 9, workspace, 9
-bind = $MOD, 0, workspace, 10
-bind = $MOD, minus, workspace, 11
-bind = $MOD, equal, workspace, 12
-
-bind = $MOD SHIFT, 1, movetoworkspace, 1
-bind = $MOD SHIFT, 2, movetoworkspace, 2
-bind = $MOD SHIFT, 3, movetoworkspace, 3
-bind = $MOD SHIFT, 4, movetoworkspace, 4
-bind = $MOD SHIFT, 5, movetoworkspace, 5
-bind = $MOD SHIFT, 6, movetoworkspace, 6
-bind = $MOD SHIFT, 7, movetoworkspace, 7
-bind = $MOD SHIFT, 8, movetoworkspace, 8
-bind = $MOD SHIFT, 9, movetoworkspace, 9
-bind = $MOD SHIFT, 0, movetoworkspace, 10
-bind = $MOD SHIFT, minus, movetoworkspace, 11
-bind = $MOD SHIFT, equal, movetoworkspace, 12
-
-bind = CTRL ALT, $RMB, exec, $HOME/.bin/killwindow
-bind = CTRL ALT, End, exec, $HOME/.bin/killwindow
-bind = SUPER SHIFT CTRL ALT, $RMB, exec, $HOME/.bin/forcekillwindow
-bind = SUPER SHIFT CTRL ALT, End, exec, $HOME/.bin/forcekillwindow
-bind = SUPER SHIFT CTRL ALT, Delete, exit
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $MOD, mouse_down, workspace, e+1
-bind = $MOD, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $MOD, $LMB, movewindow
-bindm = $MOD, $RMB, resizewindow
-
-# Apps keybinds
-exec = $HOME/.bin/appbinds on
+source=themes/mocha.conf
+source=conf/monitors.conf
+source=conf/env.conf
+source=conf/env-theme.conf
+source=conf/env-nvidia.conf # Remove if not using NVIDIA
+source=conf/autostart.conf
+source=conf/input.conf
+source=conf/appearance.conf
+source=conf/misc.conf
+source=conf/window-rules.conf
+source=conf/binds.conf
