:memo: Add packages to install to README

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -9,3 +9,4 @@ source=conf/appearance.conf
 source=conf/misc.conf
 source=conf/window-rules.conf
 source=conf/binds.conf
+exec-once = hyprctl dispatch workspace 1
