:sparkles: Delay dinit start, remove manual lock fade-in

--- a/hyprland.conf.d/autostart.conf
+++ b/hyprland.conf.d/autostart.conf
@@ -10,7 +10,7 @@ exec-once = kitty --class "btop" btop
 exec = hyprctl setcursor capitaine-cursors-ctp 32
 
 # User service manager
-exec-once = pidof -sq dinit || dinit
+exec-once = if ! pidof -sq dinit; then sleep 10; dinit; fi
 
 # Start notification daemon
 exec = pidof -sq dunst || dunst
