:sparkles: Kitty remote control

--- a/config/kitty.conf
+++ b/config/kitty.conf
@@ -159,7 +159,7 @@ mark3_foreground #1E1E2E
 mark3_background #74C7EC
 editor nvim
 close_on_child_death yes
-allow_remote_control no
+allow_remote_control yes
 # listen_on none
 # env 
 # watcher
