--- a/hyprland.conf.d/autostart.conf
+++ b/hyprland.conf.d/autostart.conf
@@ -4,7 +4,7 @@
 exec-once = wvkbd-mobintl --hidden --fn Ubuntu --bg 1e1e2e --fg 45475a --fg-sp 585b70 --press 313244 --press-sp 313244 --swipe 313244 --swipe-sp 313244 --text cdd6f4 --text-sp f5c2e7 --landscape-layers simple,special -H 300 -L 200
 
 # Btop resource monitor
-exec-once = kitty --class "btop" btop
+#exec-once = kitty --class "btop" btop
 
 # Set cursor theme
 exec = hyprctl setcursor capitaine-cursors-ctp 32
