:sparkles: Add window rules for xwaylandvideobridge

--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -13,3 +13,10 @@ windowrule = float, ^(org\.kde\.polkit-kde-authentication-agent-1)$
 
 # Open Btop on startup without switching workspace
 windowrule = workspace 12 silent, ^(btop)$
+
+# xwaylandvideobridge - https://wiki.hyprland.org/Useful-Utilities/Screen-Sharing/#xwayland
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,class:^(xwaylandvideobridge)$
