--- a/hyprland.conf.d/monitors.conf
+++ b/hyprland.conf.d/monitors.conf
@@ -1,4 +1,5 @@
 # Monitors (change this)
+#monitor=HDMI-A-1,1920x1080@60,0x908,1
 monitor=HDMI-A-1,1920x1080@240,0x908,1
 monitor=DP-2,1920x1080@60,1920x980,1
 monitor=DP-1,1920x1080@60,3840x100,1
