:sparkles: Add rofi config

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "screenshot.sh"]
 	path = submodules/screenshot.sh
 	url = https://gist.github.com/mekb-turtle/539c7dbdded90bc165ee760d78b2a60f
+[submodule "catppuccin-rofi"]
+	path = submodules/catppuccin-rofi
+	url = https://github.com/catppuccin/rofi
