:bug: Fix device errors

--- a/hyprland.conf.d/input.conf
+++ b/hyprland.conf.d/input.conf
@@ -23,9 +23,11 @@ general {
 }
 
 # Disable DualShock controller touchpad
-device:Wireless Controller Touchpad {
+device {
+	name = "Wireless Controller Touchpad"
 	enabled = no
 }
-device:Sony Computer Entertainment Wireless Controller Touchpad {
+device {
+	name = "Sony Computer Entertainment Wireless Controller Touchpad"
 	enabled = no
 }
