:sparkles: Change cursor theme

--- a/hyprland.conf.d/autostart.conf
+++ b/hyprland.conf.d/autostart.conf
@@ -7,7 +7,7 @@ exec-once = wvkbd-mobintl --hidden --fn Ubuntu --bg 1e1e2e --fg 45475a --fg-sp 5
 #exec-once = kitty --class "btop" btop
 
 # Set cursor theme
-exec = hyprctl setcursor capitaine-cursors-ctp 32
+exec = hyprctl setcursor Catppuccin-Mocha-Pink-Cursors 32
 
 # User service manager
 exec-once = if ! pidof -sq dinit; then sleep 10; dinit; fi
