--- a/hyprland.conf.d/monitors.conf
+++ b/hyprland.conf.d/monitors.conf
@@ -14,15 +14,15 @@ monitor=DP-1,addreserved,0,0,0,0
 monitor=HEADLESS-1,addreserved,0,0,0,0
 
 # Workspaces
-workspace=DP-1,12 # E/=
-workspace=DP-1,11 # W/-
-workspace=DP-2,10 # Q/0
-workspace=DP-2,9
-workspace=DP-2,8
-workspace=DP-2,7
-workspace=HDMI-A-1,6
-workspace=HDMI-A-1,5
-workspace=HDMI-A-1,4
-workspace=HDMI-A-1,3
-workspace=HDMI-A-1,2
-workspace=HDMI-A-1,1
+workspace=12,monitor:DP-2 # E/=
+workspace=11,monitor:DP-2 # W/-
+workspace=10,monitor:DP-2,default:true # Q/0
+workspace=9,monitor:DP-2
+workspace=8,monitor:DP-2
+workspace=7,monitor:DP-2
+workspace=6,monitor:HDMI-A-1
+workspace=5,monitor:HDMI-A-1
+workspace=4,monitor:HDMI-A-1
+workspace=3,monitor:HDMI-A-1
+workspace=2,monitor:HDMI-A-1
+workspace=1,monitor:HDMI-A-1,default:true
