--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -10,6 +10,7 @@ windowrule = float, title:^(KeePassXC -  Access Request)$
 windowrule = float, title:^sketch.*
 windowrule = float, steam_app_391540 # Undertale
 windowrule = float, ^(org\.kde\.polkit-kde-authentication-agent-1)$
+windowrule = tile, presenter
 
 # Open Btop on startup without switching workspace
 windowrule = workspace 12 silent, ^(btop)$
