:sparkles: Add window rules for rofi

--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -2,6 +2,10 @@
 windowrule = float, ^(foto)$
 windowrule = pin, ^(foto)$
 
+# Force focus rofi
+windowrulev2 = stayfocused, class:^(Rofi)$
+windowrulev2 = dimaround, class:^(Rofi)$
+
 # Other stuff that needs a floating window
 windowrule = float, ^(Unity)$
 windowrule = float, ^(screenshare)$
@@ -12,12 +16,9 @@ windowrule = float, steam_app_391540 # Undertale
 windowrule = float, ^(org\.kde\.polkit-kde-authentication-agent-1)$
 windowrule = tile, presenter
 
-# Open Btop on startup without switching workspace
-windowrule = workspace 12 silent, ^(btop)$
-
 # xwaylandvideobridge - https://wiki.hyprland.org/Useful-Utilities/Screen-Sharing/#xwayland
-windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
-windowrulev2 = noanim,class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
-windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
-windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+windowrulev2 = opacity 0.0 override 0.0 override, class:^(xwaylandvideobridge)$
+windowrulev2 = noanim, class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrulev2 = noblur, class:^(xwaylandvideobridge)$
