--- a/config.yaml
+++ b/config.yaml
@@ -44,6 +44,7 @@
     ~/.bin/screenshot-ocr: scripts/screenshot-ocr
     ~/.bin/screenshot-qr: scripts/screenshot-qr
     ~/.bin/rewaybar: scripts/rewaybar
+    ~/.bin/rofi: scripts/rofi
     ~/.bin/emoji: submodules/emojipicker/emoji
     ~/.bin/emojiclip: submodules/emojipicker/emojiclip
     ~/.config/hypr/themes/latte.conf: submodules/catppuccin-hyprland/themes/latte.conf
