:sparkles: Add tile mode for onlyoffice

--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -14,6 +14,7 @@ windowrule = float, title:^(KeePassXC -  Access Request)$
 windowrule = float, title:^sketch.*
 windowrule = float, steam_app_391540 # Undertale
 windowrule = float, ^(org\.kde\.polkit-kde-authentication-agent-1)$
+windowrule = tile, ^(ONLYOFFICE Desktop Editors)$
 windowrule = tile, presenter
 
 # xwaylandvideobridge - https://wiki.hyprland.org/Useful-Utilities/Screen-Sharing/#xwayland
