--- a/hyprland.conf.d/input.conf
+++ b/hyprland.conf.d/input.conf
@@ -1,6 +1,6 @@
 input {
-	kb_layout = us
-	kb_options = compose:ralt
+	kb_layout = us,gr
+	kb_options = compose:ralt,grp:win_space_toggle
 
 	follow_mouse = 1
 	float_switch_override_focus = true
