:bug: Pin rofi to all workspaces
Added benefit of fixing graphical issue on NVIDIA

--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -3,6 +3,7 @@ windowrule = float, ^(foto)$
 windowrule = pin, ^(foto)$
 
 # Force focus rofi
+windowrulev2 = pin, class:^(Rofi)$
 windowrulev2 = stayfocused, class:^(Rofi)$
 windowrulev2 = dimaround, class:^(Rofi)$
 
