--- a/hyprland.conf.d/autostart.conf
+++ b/hyprland.conf.d/autostart.conf
@@ -10,7 +10,7 @@ exec-once = wvkbd-mobintl --hidden --fn Ubuntu --bg 1e1e2e --fg 45475a --fg-sp 5
 exec = hyprctl setcursor Catppuccin-Mocha-Pink-Cursors 32
 
 # User service manager
-exec-once = if ! pidof -sq dinit; then sleep 10; dinit; fi
+exec-once = if ! pgrep -x -u "$(id -u)" dinit; then sleep 3; dinit; fi
 
 # Start notification daemon
 exec = pidof -sq dunst || dunst
