--- a/config/kitty.conf
+++ b/config/kitty.conf
@@ -22,16 +22,17 @@ cursor_blink_interval -1
 cursor_stop_blinking_after 15.0
 scrollback_lines 20000
 scrollback_pager less -r +INPUT_LINE_NUMBER
+scrollback_indicator_opacity 1.0
 # scrollback_pager_history_size 0
 # scrollback_fill_enlarged_window no
-# wheel_scroll_multiplier 5.0
-# wheel_scroll_min_lines 1
-# touch_scroll_multiplier 1.0
+wheel_scroll_multiplier 5.0
+wheel_scroll_min_lines 1
+touch_scroll_multiplier 1.0
 mouse_hide_wait 2.0
 url_color #f5c2e7
 url_style curly
 open_url_with default
-url_prefixes http https file ftp gemini irc gopher mailto news git
+url_prefixes file ftp ftps gemini git gopher http https irc ircs kitty mailto news sftp ssh
 detect_urls yes
 # url_excluded_characters 
 # copy_on_select no
@@ -258,3 +259,5 @@ map kitty_mod+J move_window left
 map kitty_mod+L move_window right
 map kitty_mod+I move_window up
 map kitty_mod+K move_window down
+map kitty_mod+alt+enter detach_window ask
+map kitty_mod+alt+tab detach_tab ask
