--- a/hyprland.conf.d/monitors.conf
+++ b/hyprland.conf.d/monitors.conf
@@ -1,6 +1,7 @@
 # Monitors (change this)
 #monitor=HDMI-A-1,1920x1080@60,0x908,1
 monitor=HDMI-A-1,1920x1080@240,0x908,1
+#monitor=HDMI-A-1,1920x1080@60,0x908,1
 monitor=DP-2,1920x1080@60,1920x980,1
 monitor=DP-1,1920x1080@60,3840x100,1
 monitor=HEADLESS-1,1920x1080@60,2700x2160,1
