:sparkles: Add window rule for Ghidra

--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -8,6 +8,7 @@ windowrulev2 = stayfocused, class:^(Rofi)$
 windowrulev2 = dimaround, class:^(Rofi)$
 
 # Other stuff that needs a floating window
+windowrule = float, ^(ghidra-Ghidra)$
 windowrule = float, ^(Unity)$
 windowrule = float, ^(screenshare)$
 windowrule = float, title:^(LibreWolf — Sharing Indicator)$
