--- a/hyprland.conf.d/appearance.conf
+++ b/hyprland.conf.d/appearance.conf
@@ -17,8 +17,9 @@ decoration {
 	blur {
 		enabled = true
 		size = 1
-		passes = 3
+		passes = 4
 		new_optimizations = true
+		noise = 0.05
 	}
 
 	drop_shadow = true
