:bug: Add window rule for Undertale

--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -18,6 +18,7 @@ windowrule = float, steam_app_391540 # Undertale
 windowrule = float, ^(org\.kde\.polkit-kde-authentication-agent-1)$
 windowrule = tile, ^(ONLYOFFICE Desktop Editors)$
 windowrule = tile, presenter
+windowrule = float, title:^(UNDERTALE)$
 
 # xwaylandvideobridge - https://wiki.hyprland.org/Useful-Utilities/Screen-Sharing/#xwayland
 windowrulev2 = opacity 0.0 override 0.0 override, class:^(xwaylandvideobridge)$
