:sparkles: Set vertical orientation for master layout on vertical monitor

--- a/hyprland.conf.d/monitors.conf
+++ b/hyprland.conf.d/monitors.conf
@@ -15,7 +15,7 @@ monitor=DP-2,addreserved,0,0,0,0
 monitor=DP-1,addreserved,0,0,0,0
 monitor=HEADLESS-1,addreserved,0,0,0,0
 
-# Workspaces
+# Workspaces (change this)
 workspace=12,monitor:DP-2 # E/=
 workspace=11,monitor:DP-2 # W/-
 workspace=10,monitor:DP-2,default:true # Q/0
@@ -28,3 +28,5 @@ workspace=4,monitor:HDMI-A-1
 workspace=3,monitor:HDMI-A-1
 workspace=2,monitor:HDMI-A-1
 workspace=1,monitor:HDMI-A-1,default:true
+
+workspace=m[DP-2],layoutopt:orientation:top
