:lipstick: Tweak window gaps

--- a/hyprland.conf.d/appearance.conf
+++ b/hyprland.conf.d/appearance.conf
@@ -1,8 +1,8 @@
 general {
 	layout = master
 
-	gaps_in = 10
-	gaps_out = 20
+	gaps_in = 16 # gaps between windows
+	gaps_out = 32 # gaps between monitor edges
 
 	border_size = 2
 	col.active_border = $pink
@@ -10,6 +10,8 @@ general {
 	col.nogroup_border = rgba(00000000)
 	col.nogroup_border_active = $pink
 }
+
+workspace=w[tv1], gapsout:8 # set outer gaps on workspaces with only 1 tiled window
 
 decoration {
 	rounding = 12
