--- a/hyprland.conf.d/monitors.conf
+++ b/hyprland.conf.d/monitors.conf
@@ -29,4 +29,4 @@ workspace=3,monitor:HDMI-A-1
 workspace=2,monitor:HDMI-A-1
 workspace=1,monitor:HDMI-A-1,default:true
 
-workspace=m[DP-2],layoutopt:orientation:top
+workspace=m[DP-2],layoutopt:orientation:top # set vertical layout for monitor DP-2
