--- a/config/kitty.conf
+++ b/config/kitty.conf
@@ -37,7 +37,7 @@ detect_urls yes
 # url_excluded_characters 
 # copy_on_select no
 # paste_actions quote-urls-at-prompt
-# strip_trailing_spaces never
+strip_trailing_spaces smart
 # select_by_word_characters @-./_~?&=%+#
 # click_interval -1.0
 # focus_follows_mouse no
