--- a/config/hyprlock.conf
+++ b/config/hyprlock.conf
@@ -11,10 +11,36 @@ general {
 }
 
 background {
-	path = $HOME/.wallpaper
 	color = $base
+	zindex = -100
+}
+
+image {
+	monitor = HDMI-A-1
+	path = $HOME/.wallpapers/1-adjusted.png # must be same size as monitor, see scripts/convert-wallpaper
 	blur_passes = 2
 	blur_size = 7
+	rounding = 0
+	border_size = 0
+	halign = left
+	valign = top
+	position = 0, 0
+	size = 1080 # adjust to the lower value of your monitor resolution
+	zindex = -10
+}
+
+image {
+	monitor = DP-2
+	path = $HOME/.wallpapers/2-adjusted.png
+	blur_passes = 2
+	blur_size = 7
+	rounding = 0
+	border_size = 0
+	halign = left
+	valign = top
+	position = 0, 0
+	size = 1080
+	zindex = -10
 }
 
 label {
