--- a/config/swaylock.conf
+++ b/config/swaylock.conf
@@ -47,5 +47,5 @@ grace=10
 #screenshots
 effect-pixelate=20
 effect-blur=20x5
-effect-compose=/home/mekb/.wallpaper
+effect-compose=/home/mekb/.wallpaper # TODO: multiple wallpapers
 image=/home/mekb/.wallpaper
