--- a/hyprland.conf.d/appearance.conf
+++ b/hyprland.conf.d/appearance.conf
@@ -37,18 +37,23 @@ animations {
 	enabled = yes
 
 	# credit to https://github.com/CallMeEchoCodes
-	# https://www.cssportal.com/css-cubic-bezier-generator/
-	bezier = bezier1, 0.1, 0.9, 0.1, 1.05
-	bezier = bezier2, 0.75, 0, 1, 1
-	bezier = none, 0, 0, 1, 1
+	# https://cubic-bezier.com/
+	bezier = overshoot-short, 0.3, 0.9, 0.8, 1.15
+	bezier = overshoot-long, 0.05, 0.9, 0.5, 1.15
+	bezier = overshoot, 0.05, 0.9, 0.5, 1.075
+	bezier = small-overshoot, 0.1, 0.9, 0.5, 1.05
+	bezier = linear, 0, 0, 1, 1
+	bezier = ease-out, 0, 0, 0.58, 1
+	bezier = ease-in-out, 0.42, 0, 0.58, 1
+	bezier = ease-in, 0.42, 0, 1, 1
 
-	animation = windows, 1, 7, bezier1, popin
-	animation = windowsMove, 1, 5, bezier1
-	animation = windowsOut, 1, 200, bezier1, popin
-	animation = border, 1, 10, default
+	animation = windows, 1, 8, overshoot-long, popin
+	animation = windowsMove, 1, 5, overshoot-long
+	animation = windowsOut, 1, 80, ease-out, popin
+	animation = border, 1, 8, default
 	animation = borderangle, 1, 8, default
-	animation = fade, 1, 7, default
-	animation = workspaces, 1, 6, default, slide
+	animation = fade, 1, 8, default
+	animation = workspaces, 1, 5, overshoot, slidefade
 }
 
 master {
