:sparkles: Add date to hyprlock and change date format

--- a/config/hyprlock.conf
+++ b/config/hyprlock.conf
@@ -56,10 +56,22 @@ label {
 }
 
 label {
+	# date
+	monitor = $monitor
+	text_align = center
+	text = cmd[update:1000] date "+%Y-%m-%d %A"
+	color = $subtext0
+    position = 0, 350
+    halign = center
+    valign = center
+    font_size = 20
+}
+
+label {
 	# time
 	monitor = $monitor
 	text_align = center
-	text = $TIME
+	text = cmd[update:1000] date "+%H:%M:%S"
 	color = $subtext0
     position = 0, 300
     halign = center
