--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -72,7 +72,7 @@
 		"interval": 1,
 		"tooltip": true,
 		"tooltip-format": "\n<tt><small>{calendar}</small></tt>",
-		"format": "🕒 {:%Y.%m.%d %a %H.%M.%S}",
+		"format": "🕒 {:%Y-%m-%d %a %H:%M:%S}",
 		"calendar": {
 			"mode": "year",
 			"mode-mon-col": 3,
