:sparkles: Add new workspace keybinds

--- a/hyprland.conf.d/monitors.conf
+++ b/hyprland.conf.d/monitors.conf
@@ -19,9 +19,9 @@ monitor=HEADLESS-1,addreserved,0,0,0,0
 workspace=12,monitor:DP-2 # E/=
 workspace=11,monitor:DP-2 # W/-
 workspace=10,monitor:DP-2,default:true # Q/0
-workspace=9,monitor:DP-2
-workspace=8,monitor:DP-2
-workspace=7,monitor:DP-2
+workspace=9,monitor:DP-2 # ^E
+workspace=8,monitor:DP-2 # ^W
+workspace=7,monitor:DP-2 # ^Q
 workspace=6,monitor:HDMI-A-1
 workspace=5,monitor:HDMI-A-1
 workspace=4,monitor:HDMI-A-1
